...
    <string name="menu_home">Home</string>
    <string name="menu_back">Back</string>
    <string name="menu_help">Help</string>
    <string name="submit">Submit</string>
    <string name="capture">Capture</string>
    <string name="picture">Take Picture</string>
    <string name="record_start">Start Recording</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="audio_accept">Accept</string>
    <string name="audio_delete">Delete</string>
    <string name="camera_error" translatable="false">This device doesn\'t support Camera2 API.</string>
    <string name="request_permission_camera">This application requires permission to use the camera in order to record the food you eat.</string>
...
